--- a/style.css
+++ b/style.css
@@ -151,7 +151,35 @@ table.steelBlueCols tfoot .links a {
   }
 }
 
-#event1 {
+.table-container {
   max-width: 300px;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: scroll;
+}
+@media screen and (min-width: 376px) {
+  .table-container {
+    max-width: 1200px;
+  }
+}
+
+#delete {
+  margin: 30px;
+  border: rgb(67, 67, 255) solid 1px;
+  background-color: whitesmoke;
+  color: rgb(67, 67, 255);
+  border-radius: 20px;
+  align-self: center;
+  display: none;
+}
+@media screen and (min-width: 376px) {
+  #delete {
+    font-size: 20px;
+  }
+}
+
+.eventContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }/*# sourceMappingURL=style.css.map */
