--- a/style.scss
+++ b/style.scss
@@ -131,8 +131,29 @@ table.steelBlueCols {
     @include desktop {
         font-size: 20px;}
   }
-#event1{
+.table-container{
 max-width : 300px;
-overflow: scroll;
+overflow-y:scroll;
+overflow-x:scroll;
+@include desktop {
+    max-width: 1200px;}
 }
-  
+#delete{
+    margin:30px;
+    border: rgb(67, 67, 255) solid 1px;
+    background-color: whitesmoke;
+    color: rgb(67, 67, 255);
+    border-radius: 20px;
+    align-self: center;
+    display:none;
+    @include desktop {
+        font-size: 20px;}
+  }
+
+
+  .eventContainer {
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
