--- a/style.css
+++ b/style.css
@@ -129,7 +129,6 @@ table.steelBlueCols tfoot .links a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  display: none;
 }
 
 .form__titre, .form__description, .form__date {
@@ -137,7 +136,7 @@ table.steelBlueCols tfoot .links a {
   border-radius: 10px;
 }
 
-.form__submit-button {
+.form__submit {
   margin-top: 10px;
   border: rgb(67, 67, 255) solid 1px;
   background-color: whitesmoke;
@@ -146,7 +145,7 @@ table.steelBlueCols tfoot .links a {
   align-self: center;
 }
 @media screen and (min-width: 376px) {
-  .form__submit-button {
+  .form__submit {
     font-size: 20px;
   }
 }
